<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AuthorInfo"
    android:background="@color/white">
    <include layout="@layout/background"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@color/teal_700"
        android:id="@+id/toolbarAuthor">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@drawable/back"
            android:id="@+id/back_icon_onInfo"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_centerVertical="true"
            android:text="Author Info"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/small_author_image"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="16dp"
            android:src="@drawable/author" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/bio_info"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@id/toolbarAuthor"
        android:padding="8dp">

        <ImageView
            android:id="@+id/author_image"
            android:layout_width="150dp"
            android:layout_height="220dp"
            android:layout_marginBottom="4dp"
            android:scaleType="centerCrop"
            android:src="@drawable/author2" />

        <TextView
            android:id="@+id/bio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:layout_toEndOf="@id/author_image"
            android:layout_toRightOf="@id/author_image"
            android:text="@string/bio"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/author_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/bio"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_toEndOf="@id/author_image"
            android:layout_toRightOf="@id/author_image"
            android:ellipsize="end"
            android:maxLines="5"
            android:text="@string/author_name"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/author_name"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_toEndOf="@id/author_image"
            android:layout_toRightOf="@id/author_image"
            android:ellipsize="end"
            android:maxLines="5"
            android:text="@string/info_author"
            android:textColor="@color/black" />
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/kolom_info_skill_riwayat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/bio_info">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/skill"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/skill"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/skill_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/skill"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:ellipsize="end"
                android:maxLines="5"
                android:text="@string/skil_info"
                android:textColor="@color/black" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/riwayat_pendidikan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/riwayat_pendidikan"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/riwayat_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/riwayat_pendidikan"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:ellipsize="end"
                android:maxLines="5"
                android:text="@string/riwayat_info"
                android:textColor="@color/black" />
        </RelativeLayout>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/kolom_info_skill_riwayat"
        android:layout_marginTop="16dp"
        android:layout_marginRight="8dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/pesan"
            android:text="Pesan dan kesan"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginLeft="16dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/pesan"
            android:text="@string/isi_pesan"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_marginLeft="16dp"
            />
    </RelativeLayout>



</RelativeLayout>